--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "keywords": [],
+  "dependencies": {
+    "discord.js": "^14.20.0"
+  },
+  "devDependencies": {}
 }
