--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "keywords": [],
   "dependencies": {
-    "discord.js": "^14.20.0"
+    "discord.js": "^14.20.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {}
 }
