--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "keywords": [],
   "dependencies": {
-    "discord.js": "^14.20.0",
-    "express": "^4.18.2"
+    "discord.js": "^14.20.0"
   },
   "devDependencies": {}
 }
