--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "keywords": [],
   "dependencies": {
     "discord.js": "^14.20.0",
+    "dotenv": "^17.2.0",
     "express": "^4.18.2"
-  },
-  "devDependencies": {}
+  }
 }
