Add ?caption and Remove Unused Imports

--- a/config.json
+++ b/config.json
@@ -25,6 +25,7 @@
         "neru": "<:neru:1386651928133370007>",
         "miku": "<:miku:1386798721206976592>",
         "teto": "<:teto:1386798729323085987>",
-        "neru_fire": "<:neru_fire:1386806552761204918>"
+        "neru_fire": "<:neru_fire:1386806552761204918>",
+        "loading": "<a:loading:1395892033779929158>"
     }
 }
