--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "keywords": [],
   "dependencies": {
+    "canvas": "^3.1.2",
     "discord.js": "^14.20.0",
     "dotenv": "^17.2.0",
     "express": "^4.18.2"
